// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rule attr-quotes should contain documentation (auto) 1`] = `
Object {
  "description": "Attribute values are required to be quoted with doublequotes unless the attribute value itself contains doublequotes in which case singlequotes should be used.",
  "url": "https://html-validate.org/rules/attr-quotes.html",
}
`;

exports[`rule attr-quotes should contain documentation (fixed) 1`] = `
Object {
  "description": "Attribute values are required to be quoted with doublequotes.",
  "url": "https://html-validate.org/rules/attr-quotes.html",
}
`;
